Correction gap about

--- a/src/app/features/aboutMe/components/about-me/about-me.component.css
+++ b/src/app/features/aboutMe/components/about-me/about-me.component.css
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap : 2em;
   margin: var(--margin-mobile);
   @media screen and (min-width: 959px) {
     flex-direction: row;
